--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -1,12 +1,7 @@
 .free-layout {
-    display: flex;
     padding: 10px 0;
     box-sizing: border-box;
     background-color: #f9fafc;
-    justify-content: space-between;
-    align-items: center;
-    height: 56px;
+    min-height: 56px;
 }
-.free-row {
-    
-}
+
